# ai_tracker_correlator

./: .gitignore  GPU_SETUP.md  INSTALL.md  README.md  TRAINING.md  ai_tracker_architecture.md  architecture_diagrams.md  check_dist.py  eval_error.txt  eval_error_log.txt  hybrid_tracker.py  hybrid_tracker_viz.html  hybrid_tracker_viz.json  hybrid_tracker_viz_data.js  hyprid_tracker_write_up.md  main.py  pyproject.toml  requirements.txt  research_proposal.md  run_cli.py  viz_animation.py  viz_results.py
checkpoints/: checkpoint_epoch_13.pt  checkpoint_epoch_14.pt  checkpoint_epoch_15.pt  checkpoint_epoch_18.pt  checkpoint_epoch_19.pt  checkpoint_epoch_20.pt  checkpoint_epoch_24.pt  checkpoint_epoch_26.pt  checkpoint_epoch_29.pt  checkpoint_epoch_3.pt  checkpoint_epoch_34.pt  checkpoint_epoch_39.pt  checkpoint_epoch_44.pt  checkpoint_epoch_49.pt  checkpoint_epoch_5.pt  checkpoint_epoch_6.pt  checkpoint_epoch_7.pt  checkpoint_epoch_9.pt  clutter_classifier.pt  gnn_tracker.pt  model_v2_best.pt  model_v2_real_best.pt  model_v2_temporal_best.pt  model_v3.2.pt  model_v3.pt  model_v4_fusion_best.pt  model_v4_learnable_best.pt  pairwise_classifier_best.pt  pairwise_psr_psr.pt  pairwise_ssr_any.pt
configs/: best_config.json  default_config.json  improved_config.json  pipeline_example.yaml
dashboard/: app.py  training_backend.py
data/: cat_62_data.txt  sim_001.jsonl  sim_realistic_001.jsonl  test_optimization.db  test_optimization_v2.db  test_track_ids.json
evaluation_results/: sort_baseline_metrics.json
legacy/: debug_prediction_values.py  debug_v2.py  fusion_pipeline.py  (+14 more)
(+74 files in other folders)
