[project]
name = "ai-tracker-correlator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.0",
    "torch-geometric>=2.6.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.0",
    "optuna>=4.1.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.14.0",
    "streamlit>=1.36.0",
    "torchviz>=0.0.2",
    "graphviz>=0.20.0",
    "pydantic>=2.7.0",
    "fpdf2>=2.7.0",
    "onnx>=1.16.0",
    "seaborn>=0.13.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

